    associated, the source location of the define-syntax is now
    reported.

** New features

*** SRFI 211

  All procedures and syntax of SRFI 211 is now supported.  This
  includes support for explicit and implicit renaming macros, the
  syntactic closure macro facility, and old-style Lisp macros.

*** SRFI 213

  Identifier properties from SRFI 213 are now supported.

** Various bug fixes

* Noteworthy changes in release 0.0.2 (2020-09-24) [alpha]

** Bug fixes

*** Interactive environment

  The REPL and the interactive environment are now complete.  In
  particular, they now allow top-level definitions.

** New features

*** SRFI 188

  SRFI 188 (Splicing binding constructs for syntactic keywords) is now
  supported.

*** SRFI 206

  SRFI 206 (Auxiliary Syntax Keywords) is now supported.

*** SRFI 212

  SRFI 212 (Aliases) is now supported.

** Documentation

  Man pages and a manual have been added.

* Noteworthy changes in release 0.0.1 (2020-09-17) [alpha]

  Initial release.

-----

Copyright (C) 2020 Marc Nieper-Wißkirchen

This file is part of Unsyntax.

Permission is hereby granted, free of charge, to any person
obtaining a copy of this software and associated documentation files
(the "Software"), to deal in the Software without restriction,
including without limitation the rights to use, copy, modify, merge,
publish, distribute, sublicense, and/or sell copies of the Software,
and to permit persons to whom the Software is furnished to do so,
subject to the following conditions:

The above copyright notice and this permission notice (including the
next paragraph) shall be included in all copies or substantial
portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN