@@ -23,38 +23,7 @@
 ;; CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 ;; SOFTWARE.
 
-(import (scheme base)
-        (scheme eval)
-        (srfi 64)
-        (srfi 211 syntax-case)
-        (srfi 213)
-        (example library)
-        (example r6rs-library))
-
-(test-begin "Compiler Test")
-
-(test-assert (memq 'test (features)))
-
-(test-equal 42 foo)
-(test-equal 'bar (bar))
-
-(test-equal 42 (eval 'foo (environment '(example library))))
-(test-equal 'bar (eval '(bar) (environment '(example library))))
-
-(test-equal "the-answer"
-  (let-syntax ((get-the-answer
-                (lambda (stx)
-                  (lambda (lookup)
-                    #`'#,(datum->syntax #'* (lookup #'foo #'*))))))
-    (get-the-answer)))
-(test-equal "the-answer"
-  (eval '(let-syntax ((get-the-answer
-                       (lambda (stx)
-                         (lambda (lookup)
-                           #`'#,(datum->syntax #'* (lookup #'foo #'*))))))
-           (get-the-answer))
-        (environment '(scheme base) '(example library)
-                     '(srfi 211 syntax-case))))
-
-
-(test-end)
+(library (example r6rs-library)
+  (export baz)
+  (import (scheme base))
+  (define baz 'baz))
